--- a/android/src/main/res/values-ak-rTW/strings.xml
+++ b/android/src/main/res/values-ak-rTW/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="xen_app_name" translatable="false">Xen Cap</string>
-    <string name="facebook_app_id">2634439983509101</string>
-    <string name="fb_login_protocol_scheme">fb2634439983509101</string>
-    <string name="deeplink_host">xencapital.com</string>
-    <string name="xen_is_running">Xen Cap is running</string>
-    <string name="xen_noti_channel_name">Messages</string>
+   
+    <string name="read_storage_tip">Your authorization is required to open the system album</string>
+     <string name="open_camera_tip">Your authorization is required to turn on the camera</string>
+
+     <string name="menu_cancel">Cancel</string>
+     <string name="menu_camera">Camera</string>
+     <string name="menu_album">Album</string>
 </resources>
